saves/test/demo_full_20240802_193545/lemmings3/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp lemmings3_tb.v lemmings3.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
lemmings3_tb.v:161: $finish called at 460000 (1ps)

iverilog cmd 2 error:

